--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/zephyrabd
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8083
+spring.jpa.properties.hibernate.format_sql=true
+
